fixed wrong color for profile-null-image

--- a/src/application-frame/styling/color-schemes/blue.scss
+++ b/src/application-frame/styling/color-schemes/blue.scss
@@ -672,7 +672,7 @@ body {
                 background: var(--menubar-background);
                 color: var(--menubar-text-color);
 
-                .p-menuitem-text, .p-submenu-icon, .p-menuitem-icon {
+                .p-menuitem-text, .p-submenu-icon, .p-menuitem-icon:not(.profile-image-null) {
                     color: var(--menubar-text-color);
                 }
 
